# robococonut

./: .gitignore  .gitmodules  README.md  Servo_328P.cpp  Servo_328P.hpp  Servo_base.hpp  Servo_rpi.cpp  Servo_rpi.hpp  docker.sh  main.cpp  rpi_setup.sh  settings.hpp  test.sh
docker_ros/: README.md  docker-compose.yml
docker_ros/publisher/: package.xml
docker_ros/publisher/src/: publisher_node.py
docker_ros/subscriber/: package.xml
docker_ros/subscriber/src/: subscriber_node.py
nano/motor_v2_pure_328P/: motor.ino  readme.md  test_motor.py
nano/servo/: servo.ino
servo_rpi4/: servo_ctrl.cpp  servo_ctrl.hpp  servo_test.cpp  test.sh
test/: host_test_tcp.cpp  host_test_webcam.cpp  host_test_webcam.py  rpi_328p_set_servos.py  rpi_328p_test_servos.py  rpi_test_tcp.cpp  rpi_test_webcam.cpp  rpi_test_webcam.sh
