<package>
  <name>subscriber</name>
  <version>0.1.0</version>
  <description>The subscriber node for the ROS2 demo.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>